--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,6 @@ h6 {
   font-size: 13px;
   font-weight: 500;
   letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
 #home .btn-scroll {
@@ -643,6 +642,13 @@ section {
 /*--------------------------------------------------------------
 # My Product
 --------------------------------------------------------------*/
+.product .info-box {
+  color: #444444;
+  text-align: center;
+  box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
+  padding: 20px 0 30px 0;
+}
+
 .product #product-flters {
   list-style: none;
   margin-bottom: 20px;
