--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,7 +904,7 @@ section {
   padding: 10px 0;
   background-color: darkred;
   color: white;
-  width: 800px;
+  width: 100%;
   margin-left: 120px;
   padding-left: 20px;
 }
