--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,9 +904,10 @@ section {
   padding: 10px 0;
   background-color: darkred;
   color: white;
-  width: 100%;
-  margin-left: 120px;
+  width: 70%;
+  margin-left: 2em;
   padding-left: 20px;
+  padding-right: 20px;
 }
 
 .inner-page .container .numbered-item::before {
